--- a/index.html
+++ b/index.html
@@ -163,6 +163,16 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 		<div class="container">
 			<h3 class="title">Work Experience</h3>
 			<div class="work-info"> 
+				<div class="col-md-6 work-right work-right2"> 
+					<h4>Aug 2016 - Present</h4>
+				</div>
+				<div class="col-md-6 work-left work-left2"> 
+					<h5> Freelancing <span class="glyphicon glyphicon-briefcase"> </span></h5>
+					<p>Work on Data Analytics, Visualization, Web Development, Design and Writing.</p>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
 					<h4>Jun 2014 - Aug 2016 </h4>
 				</div>
@@ -194,8 +204,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
 					<ul class="resp-tabs-list wow fadeInUp animated" data-wow-delay=".7s">
 						<li class="resp-tab-item"><span>All</span></li>
-						<li class="resp-tab-item"><span>Django+JQuery</span></li>
-						<li class="resp-tab-item"><span> Flask+AngularJS </span></li>
+						<li class="resp-tab-item"><span>Django</span></li>
+						<li class="resp-tab-item"><span>AngularJS</span></li>
 						<!-- <li class="resp-tab-item"><span>Wordpress</span></li>					 -->
 					</ul>	
 					<div class="clearfix"> </div>	
@@ -239,6 +249,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</div>
 								</div>
 
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/All-About-Books">
+											<img src="images/books.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>All About Books</span></h3>
+												<p> A CMS for Books with shopping cart, built in Django - Mezzanine and Cartridge. </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+								
 								<div class="clearfix"> </div>
 							</div>
 						</div>
@@ -265,6 +287,18 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 											<div class="figcaption">
 												<h3><span> QandA</span></h3>
 												<p>A question and answer forum built using Django & JQuery.</p>
+											</div>
+										</a>	
+									</div>
+								</div>
+
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/All-About-Books">
+											<img src="images/books.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>All About Books</span></h3>
+												<p> A CMS for Books with shopping cart, built in Django - Mezzanine and Cartridge. </p>
 											</div>
 										</a>	
 									</div>
