--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 			<h3 class="title"> About Me</h3>
 			<div class="about-left">
 				<p>Hi, I am a Computer Science Graduate from <b>Visveswaraya Technological University, Karnataka </b>working as a Software Developer since 6 years. Love solving problems and coding in <b> Python.</b> I like learning new Technologies and languages.
-				Passionate about <b>Bioinformatics, Data Analysis and Machine Learning. </b></p>
+				Passionate about <b>Bioinformatics, Data Analytics and Machine Learning. </b></p>
 				<br/>
 				<p>My hobbies include Reading lots of <b>Books</b> - Fiction and Non-fiction, <b>Photography,</b> Sketching/Drawing and <b>Music.</b> </p>
 				<br/>
