--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 						<li><a href="#projects" class="scroll">My Projects</a></li>
 						<li><a href="#education" class="scroll">Education</a></li>
 						<li><a href="#skills" class="scroll">Skills</a></li>						
-						<li><a href="#blog" class="scroll">Blog</a></li>
+						<li><a href="blog.shilpamberker.com" class="scroll">Blog</a></li>
 					</ul>
 					<div class="clearfix"> </div>
 				</div>
