--- a/index.html
+++ b/index.html
@@ -397,7 +397,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<div id="skills" class="skills">
 		<div class="container">
 			<h3 class="title">Skills</h3>
-				<div id="skillchart" style="min-width: 310px; max-width: 600px; height: 400px; margin-top: 0px; margin-left: 260px; background-color: 'black';">
+				<div id="skillchart" style="min-width: 360px; max-width: 700px; height: 450px; margin-top: 0px; margin-left: 260px; background-color: 'black';">
 				</div>
 				<br/>
 			<!-- <div class="skills-info">
@@ -461,7 +461,7 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 	<!--footer-->
 	<div class="footer">
 		<div class="container">
-			<p> - Shilpa Amberker </p>
+			<p> &copy Shilpa Amberker </p>
 		</div>
 	</div>
 	<!--//footer-->
