--- a/index.html
+++ b/index.html
@@ -204,14 +204,15 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 				<div id="horizontalTab" style="display: block; width: 100%; margin: 0px;">
 					<ul class="resp-tabs-list wow fadeInUp animated" data-wow-delay=".7s">
 						<li class="resp-tab-item"><span>All</span></li>
-						<li class="resp-tab-item"><span>Django</span></li>
-						<li class="resp-tab-item"><span>AngularJS</span></li>
+						<li class="resp-tab-item"><span>Web</span></li>
+						<li class="resp-tab-item"><span>Data Analytics/ML/AI</span></li>
 						<!-- <li class="resp-tab-item"><span>Wordpress</span></li>					 -->
 					</ul>	
 					<div class="clearfix"> </div>	
 					<div class="resp-tabs-container">
 						<div class="tab-1 resp-tab-content">
 							<div class="tab_img">
+							<br/>
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="https://github.com/shilpavijay/Follow-Me">
@@ -239,18 +240,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="https://github.com/shilpavijay/cashflow">
-											<img src="images/expense1.jpg" alt="" class="img-responsive" />
-											<div class="figcaption">
-												<h3><span>Cash Flow</span></h3>
-												<p>Expense calculator - AngularJS, Flask and MySql </p>
-											</div>
-										</a>	
-									</div>
-								</div>
-
-								<div class="col-md-4 portfolio-grids">
-									<div class="grid">
 										<a href="https://github.com/shilpavijay/All-About-Books">
 											<img src="images/books.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
@@ -260,7 +249,43 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</a>	
 									</div>
 								</div>
-								
+
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/cashflow">
+											<img src="images/expense.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>Cash Flow</span></h3>
+												<p>Expense calculator - AngularJS, Flask and MySql </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+						
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/Sentimental-Chirps">
+											<img src="images/sentitweet.png" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>Sentimental-Chirps</span></h3>
+												<p> Sentiment Analysis on Tweets using Natural Language Processing and Machine Learning. </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/Stance">
+											<img src="images/prodreview.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>Stance</span></h3>
+												<p> Opinion Mining - Product Review Classification with Machine Learning and NLTK </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+
 								<div class="clearfix"> </div>
 							</div>
 						</div>
@@ -304,11 +329,6 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 									</div>
 								</div>
 
-							</div>
-						</div>
-
-						<div class="tab-1 resp-tab-content">
-							<div class="tab_img">
 								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="https://github.com/shilpavijay/cashflow">
@@ -320,6 +340,38 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 										</a>	
 									</div>
 								</div>
+
+							</div>
+						</div>
+
+						<div class="tab-1 resp-tab-content">
+							<div class="tab_img">
+							   <p>Data Analytics, Machine Learning and Artificial Intelligence</p>
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/Sentimental-Chirps">
+											<img src="images/sentitweet.png" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>Sentimental-Chirps</span></h3>
+												<p> Sentiment Analysis on Tweets implemented using Natural Language Processing and Machine Learning. </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/Stance">
+											<img src="images/prodreview.jpg" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>Stance</span></h3>
+												<p> Opinion Mining - Product Review Classification with Machine Learning and NLTK </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+
 							</div>
 						</div>
 
