--- a/index.html
+++ b/index.html
@@ -470,7 +470,7 @@
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
 					<h5> Coursera <span class="glyphicon glyphicon-education"></span></h5>
-					<p> Accomplished with Grade of 100% </p>
+					<p> Grade Achieved: 100% </p>
 					<p><a href="https://www.coursera.org/account/accomplishments/certificate/8KZ7HTZ5YKGW">View Course Certificate</a></p>
 				</div>
 				<div class="clearfix"> </div>
