--- a/index.html
+++ b/index.html
@@ -169,8 +169,18 @@
 		<div class="container">
 			<h3 class="title">Work Experience</h3>
 			<div class="work-info"> 
+				<div class="col-md-6 work-left"> 
+					<h4>May 2017 - Present</h4>
+				</div>
+				<div class="col-md-6 work-right"> 
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Mphasis</h5>
+					<p>Currently work as <b>Module Lead </b>in the Bank and Finance Account of the Company.</p>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+			<div class="work-info"> 
 				<div class="col-md-6 work-right work-right2"> 
-					<h4>Aug 2016 - Present</h4>
+					<h4>Aug 2016 - Apr 2017</h4>
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
 					<h5> Freelancing <span class="glyphicon glyphicon-briefcase"> </span></h5>
@@ -180,7 +190,7 @@
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-left"> 
-					<h4>Jun 2014 - Aug 2016 </h4>
+					<h4>Jun 2014 - Jul 2016 </h4>
 				</div>
 				<div class="col-md-6 work-right"> 
 					<h5><span class="glyphicon glyphicon-briefcase"> </span> Wells Fargo</h5>
