--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
 				</div>
 				<div class="col-md-6 work-right"> 
 					<h5><span class="glyphicon glyphicon-briefcase"> </span> Mphasis</h5>
-					<p>Currently work as <b>Module Lead </b>in the Banking and Finance Account of the Company.</p>
+					<p>Working currently as <b>Module Lead </b>in the Banking and Finance Account of the Company.</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
