--- a/index.html
+++ b/index.html
@@ -93,6 +93,12 @@
 								<li><a href="https://in.linkedin.com/in/shilpaamberker">in.linkedin.com/in/shilpaamberker</a></li>
 							</ul>
 						</li>
+						<li>
+							<ul class="address-text">
+								<li><b>Blog </b></li>
+								<li><a href="http://blog.shilpamberker.com/">blog.shilpamberker.com</a></li>
+							</ul>
+						</li>
 					</ul>
 				</div>
 				<div class="clearfix"> </div>
@@ -118,6 +124,7 @@
 						<li><a href="#education" class="scroll">Education</a></li>
 						<li><a href="#skills" class="scroll">Skills</a></li>						
 						<li><a href="http://blog.shilpamberker.com/">Blog</a></li>
+						<li><a href="http://blog.shilpamberker.com/contact-me/">Contact</a></li>
 					</ul>
 					<div class="clearfix"> </div>
 				</div>
