--- a/index.html
+++ b/index.html
@@ -597,7 +597,7 @@
 	<!--footer-->
 	<div class="footer">
 		<div class="container">
-			<p> &copy Shilpa Amberker </p>
+			<p> &copy 2017 Shilpa Amberker </p>
 		</div>
 	</div>
 	<!--//footer-->
