--- a/index.html
+++ b/index.html
@@ -164,6 +164,8 @@
 				</ul>
 				<div class="clearfix"> </div>
 			</div>
+
+			
 	<!-- 	</div> -->
 			<div class="clearfix"> </div>
 		</div>
@@ -180,7 +182,7 @@
 					<h4>May 2017 - Present</h4>
 				</div>
 				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> Mphasis</h5>
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> MphasiS</h5>
 					<p>Working currently as <b>Module Lead </b>in the Banking and Finance Account of the Company.</p>
 				</div>
 				<div class="clearfix"> </div>
@@ -321,17 +323,18 @@
 									</div>
 								</div>
 
-								<!-- <div class="col-md-4 portfolio-grids">
+								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="https://github.com/shilpavijay/Pandas-and-Data-Analytics">
-											<img src="images/da.jpg" alt="" class="img-responsive" />
+										<a href="https://github.com/shilpavijay/Experceive">
+											<img src="images/experceive.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3><span>Data Analytics</span></h3>
-												<p> Python Essentials for Data Analysis - Pandas, Numpy, Matplotlib </p>
+												<h3><span>Experceive</span></h3>
+												<p>Data Analysis and Visualization of Expenses </p>
 											</div>
 										</a>	
 									</div>
-								</div> -->
+								</div>
+
 
 								<div class="clearfix"> </div>
 							</div>
@@ -432,17 +435,17 @@
 									</div>
 								</div>
 
-								<!-- <div class="col-md-4 portfolio-grids">
+								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
-										<a href="https://github.com/shilpavijay/Pandas-and-Data-Analytics">
-											<img src="images/da.jpg" alt="" class="img-responsive" />
+										<a href="https://github.com/shilpavijay/Experceive">
+											<img src="images/experceive.jpg" alt="" class="img-responsive" />
 											<div class="figcaption">
-												<h3><span>Data Analytics</span></h3>
-												<p> Python Essentials for Data Analysis - Pandas, Numpy, Matplotlib </p>
+												<h3><span>Experceive</span></h3>
+												<p>Data Analysis and Visualization of Expenses </p>
 											</div>
 										</a>	
 									</div>
-								</div>	 -->
+								</div>
 
 							</div>
 						</div>
