--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 						<li>
 							<ul class="address-text">
 								<li><b>Blog </b></li>
-								<li><a href="http://blog.shilpamberker.com/">blog.shilpamberker.com</a></li>
+								<li><a href="http://blog.kriyavikalpa.com/">blog.kriyavikalpa.com</a></li>
 							</ul>
 						</li>
 					</ul>
@@ -123,8 +123,8 @@
 						<li><a href="#projects" class="scroll">My Projects</a></li>
 						<li><a href="#education" class="scroll">Education</a></li>
 						<li><a href="#skills" class="scroll">Skills</a></li>						
-						<li><a href="http://blog.shilpamberker.com/">Blog</a></li>
-						<li><a href="http://blog.shilpamberker.com/contact-me/">Contact</a></li>
+						<li><a href="http://blog.kriyavikalpa.com/">Blog</a></li>
+						<li><a href="http://blog.kriyavikalpa.com/contact-me/">Contact</a></li>
 					</ul>
 					<div class="clearfix"> </div>
 				</div>
