--- a/index.html
+++ b/index.html
@@ -335,6 +335,18 @@
 									</div>
 								</div>
 
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/Tableau">
+											<img src="images/Population.png" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>Tableau</span></h3>
+												<p>Analysis and Visualization using Tableau </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+
 
 								<div class="clearfix"> </div>
 							</div>
@@ -421,9 +433,8 @@
 										</a>	
 									</div>
 								</div>
-
-
-							<div class="col-md-4 portfolio-grids">
+								
+								<div class="col-md-4 portfolio-grids">
 									<div class="grid">
 										<a href="https://github.com/shilpavijay/Machine-Learning-in-Octave">
 											<img src="images/ml.jpg" alt="" class="img-responsive" />
@@ -446,6 +457,21 @@
 										</a>	
 									</div>
 								</div>
+
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/Tableau">
+											<img src="images/Population.png" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>Tableau</span></h3>
+												<p>Analysis and Visualization using Tableau </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+
+								
+
 
 							</div>
 						</div>
