new certificate, proj, skill added

--- a/index.html
+++ b/index.html
@@ -155,12 +155,11 @@
 			<div class="col-md-4 about-right">
 				<ul>
 					<h5>Accomplishments</h5>
-					<li class="accomplishment"><span class="glyphicon glyphicon-menu-right"></span> <b> Machine Learning by Stanford University on Coursera. <br/>Grade Achieved: 100%. </b><br/>
-					<a href="https://www.coursera.org/account/accomplishments/certificate/8KZ7HTZ5YKGW">Link to course certificate </a></li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> <b>Wells Fargo - Achieving Excellence Award </b>2016 - Q1 for "Delivering and building relationships with Partners"</li>
-					<!-- <li><span class="glyphicon glyphicon-menu-right"></span> Morbi dictum velit vitae porttitor</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> Fusce at metus id justo ullamcorper</li>
-					<li><span class="glyphicon glyphicon-menu-right"></span> Aliquam ac nisl id justo malesuada </li> -->
+					<li class="accomplishment"><span class="glyphicon glyphicon-menu-right"></span> <b> Machine Learning by Stanford University on Coursera.</b><br/>
+					<a href="https://www.coursera.org/account/accomplishments/certificate/8KZ7HTZ5YKGW">Link to Coursera certificate</a></li>
+					<li class="accomplishment"><span class="glyphicon glyphicon-menu-right"></span> <b> Data Visualization with D3.js </b><br/>
+					<a href="https://www.udemy.com/certificate/UC-S5AA4MEU/">Link to Udemy certificate </a></li>
+					<li><span class="glyphicon glyphicon-menu-right"></span> <b>Wells Fargo - Achieving Excellence Award </b>2016 - Q1 </li>
 				</ul>
 				<div class="clearfix"> </div>
 			</div>
@@ -203,7 +202,7 @@
 				</div>
 				<div class="col-md-6 work-right"> 
 					<h5><span class="glyphicon glyphicon-briefcase"> </span> Wells Fargo</h5>
-					<p>I worked as <b>Senior Analyst </b>in the Retail Lending division of the Bank on a highly critical Application. Earned multiple accolades and appreciations from business partners for consistent, precise and timely delivery.</p>
+					<p>Worked as <b>Senior Analyst </b>in the Retail Lending division of the Bank on a highly critical Application. Earned multiple accolades and appreciations from business partners for consistent, precise and timely delivery.</p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
@@ -347,6 +346,18 @@
 									</div>
 								</div>
 
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/D3js-Charts">
+											<img src="images/scatterplot.png" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>D3.js Charts</span></h3>
+												<p>Data Visualization with D3.js </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+
 
 								<div class="clearfix"> </div>
 							</div>
@@ -470,6 +481,18 @@
 									</div>
 								</div>
 
+								<div class="col-md-4 portfolio-grids">
+									<div class="grid">
+										<a href="https://github.com/shilpavijay/D3js-Charts">
+											<img src="images/scatterplot.png" alt="" class="img-responsive" />
+											<div class="figcaption">
+												<h3><span>D3.js Charts</span></h3>
+												<p>Data Visualization with D3.js </p>
+											</div>
+										</a>	
+									</div>
+								</div>
+
 								
 
 
@@ -516,7 +539,7 @@
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
 					<h5> Coursera <span class="glyphicon glyphicon-education"></span></h5>
-					<p> Grade Achieved: 100% </p>
+					<p> Achieved 100% </p>
 					<p><a href="https://www.coursera.org/account/accomplishments/certificate/8KZ7HTZ5YKGW">View Course Certificate</a></p>
 				</div>
 				<div class="clearfix"> </div>
@@ -626,7 +649,7 @@
 	<!--footer-->
 	<div class="footer">
 		<div class="container">
-			<p> &copy 2017 Shilpa Amberker </p>
+			<p> &copy 2018 Shilpa Amberker </p>
 		</div>
 	</div>
 	<!--//footer-->
