new work exp added

--- a/index.html
+++ b/index.html
@@ -176,16 +176,30 @@
 	<div id="work" class="work">
 		<div class="container">
 			<h3 class="title">Work Experience</h3>
+			
 			<div class="work-info"> 
-				<div class="col-md-6 work-left"> 
-					<h4>May 2017 - Present</h4>
+				<div class="col-md-6 work-right work-right2"> 
+					<h4>Jan 2018 - Present </h4>
 				</div>
-				<div class="col-md-6 work-right"> 
-					<h5><span class="glyphicon glyphicon-briefcase"> </span> MphasiS</h5>
-					<p>Working currently as <b>Module Lead </b>in the Banking and Finance Account of the Company.</p>
+				<div class="col-md-6 work-left work-left2"> 
+					<h5> Accenture <span class="glyphicon glyphicon-briefcase"> </span></h5>
+					<p>Currenly working as <b> Analytics and Modeling Specialist</b></p>
 				</div>
 				<div class="clearfix"> </div>
 			</div>
+
+
+			<div class="work-info">
+				<div class="col-md-6 work-left"> 
+					<h4>May 2017 - Nov 2017</h4>
+				</div>
+				<div class="col-md-6 work-right"> 
+					<h5><span class="glyphicon glyphicon-briefcase"> </span> Mphasis</h5>
+					<p><b>Module Lead </b>in the Banking and Finance Account of the Company. Worked on developing a web application for a major US bank. Also worked on a POC - An application on Version Control Metric Analytics</p>
+				</div>
+				<div class="clearfix"> </div>
+			</div>
+
 			<div class="work-info"> 
 				<div class="col-md-6 work-right work-right2"> 
 					<h4>Aug 2016 - Apr 2017</h4>
@@ -208,7 +222,7 @@
 			</div>
 			<div class="work-info"> 
 				<div class="col-md-6 work-right work-right2"> 
-					<h4>Nov 2010 - Jun 2014 </h4>
+					<h4>Nov 2010 - May 2014 </h4>
 				</div>
 				<div class="col-md-6 work-left work-left2"> 
 					<h5> Tech Mahindra <span class="glyphicon glyphicon-briefcase"> </span></h5>
